Terraform AWS Puppet Server & Agent